Added VGG Coco SSD512
This model is precise but very very slow

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 ### Project outputs ###
 *output*
 
+### Big Files ###
+*IR/VGG_coco_SSD_512x512_iter_360000/*
+
 ### Code ###
 .vscode/*
 .vscode/settings.json
